--- a/webroot/footnotes.html
+++ b/webroot/footnotes.html
@@ -64,3 +64,80 @@
 <p>
   <a href="#_ftnref28" name="_ftn28"><sup>[28]</sup></a> CBPP, ” Policy Basics: Section 8 Project-Based Rental Assistance,” January 10, 2022, <a href="https://www.cbpp.org/research/policy-basics-section-8-project-based-rental-assistance">https://www.cbpp.org/research/policy-basics-section-8-project-based-rental-assistance</a>
 </p>
+<p>
+  <a href="#_ftnref29" name="_ftn29"><sup>[29]</sup></a> Joint Center for Housing Studies of Harvard University, ”America’s Rental Housing,” 2024, <a href="https://www.jchs.harvard.edu/americas-rental-housing-2024">https://www.jchs.harvard.edu/americas-rental-housing-2024</a>
+</p>
+<p>
+  <a href="#_ftnref30" name="_ftn30"><sup>[30]</sup></a> HUD defines extremely low income as below the federal poverty line or 30 percent of the local median income, whichever is higher.
+</p>
+<p>
+  <a href="#_ftnref31" name="_ftn31"><sup>[31]</sup></a> National Low-Income Housing Coalition, ”The Gap: A Shortage of Affordable Housing,” March 2024, <a href="https://nlihc.org/gap">https://nlihc.org/gap</a>
+</p>
+<p>
+  <a href="#_ftnref32" name="_ftn32"><sup>[32]</sup></a> National Low Income Housing Coalition, ”Out of Reach: The High Cost of Housing, 2024, <a href="https://nlihc.org/oor">https://nlihc.org/oor</a>
+</p>
+<p>
+  <a href="#_ftnref33" name="_ftn33"><sup>[33]</sup></a> Department of Housing and Urban Development 2023 Picture of Subsidized Households
+</p>
+<p>
+  <a href="#_ftnref34" name="_ftn34"><sup>[34]</sup></a> Joint Center for Housing Studies of Harvard University, ”America’s Rental Housing,” 2024, <a href="https://www.jchs.harvard.edu/americas-rental-housing-2024">https://www.jchs.harvard.edu/americas-rental-housing-2024</a>
+</p>
+<p>
+  <a href="#_ftnref35" name="_ftn35"><sup>[35]</sup></a> Erik Gartland, ” Chart Book: Funding Limitations Create Widespread Unmet Need for Rental Assistance,” CBPP, February 22, 2022, <a href="https://www.cbpp.org/research/housing/funding-limitations-create-widespread-unmet-need-for-rental-assistance">https://www.cbpp.org/research/housing/funding-limitations-create-widespread-unmet-need-for-rental-assistance</a>
+</p>
+<p>
+  <a href="#_ftnref36" name="_ftn36"><sup>[36]</sup></a> National Alliance to End Homelessness, ”State of Homelessness: 2023 Edition,” <a href="https://endhomelessness.org/homelessness-in-america/homelessness-statistics/state-of-homelessness/">https://endhomelessness.org/homelessness-in-america/homelessness-statistics/state-of-homelessness/</a>
+</p>
+<p>
+  <a href="#_ftnref37" name="_ftn37"><sup>[37]</sup></a> National CAPACD, ”Crisis to Impact: Reflecting on a Decade of Housing Counseling Services in Asian American and Pacific Islander Communities,” March 2021, https://www.nationalcapacd.org/data-research/crisis-to-impact-reflecting-on-a-decade-of-housing-counseling-services-in-asian-american-and-pacific-islander-communities/
+</p>
+<p>
+  <a href="#_ftnref38" name="_ftn38"><sup>[38]</sup></a> Mary Frances Kenion, ”Long Overdue: Visibility for Native Hawaiian and Pacific Islanders Experiencing Homelessness,” National Alliance to End Homelessness, August 14, 2023, <a href="https://endhomelessness.org/blog/long-overdue-visibility-for-native-hawaiian-and-pacific-islanders-experiencing-homelessness/">https://endhomelessness.org/blog/long-overdue-visibility-for-native-hawaiian-and-pacific-islanders-experiencing-homelessness/</a>
+</p>
+<p>
+  <a href="#_ftnref39" name="_ftn39"><sup>[39]</sup></a> Howard Shih et. al., ” The Post-Pandemic Agenda for Community Well-being among Asian Americans, Native Hawaiians, and Pacific Islanders in California,” UCLA Center for Health Policy Research, February 6, 2023, <a href="https://healthpolicy.ucla.edu/our-work/publications/post-pandemic-agenda-community-well-being-among-asian-americans-native-hawaiians-and-pacific">https://healthpolicy.ucla.edu/our-work/publications/post-pandemic-agenda-community-well-being-among-asian-americans-native-hawaiians-and-pacific</a>
+</p>
+<p>
+  <a href="#_ftnref40" name="_ftn40"><sup>[40]</sup></a> Department of Housing and Urban Development 2023 Picture of Subsidized Households
+</p>
+<p>
+  <a href="#_ftnref41" name="_ftn41"><sup>[41]</sup></a> Department of Housing and Urban Development 2023 Picture of Subsidized Households
+</p>
+<p>
+  <a href="#_ftnref42" name="_ftn42"><sup>[42]</sup></a> From 1974 to 1990, the PBRA program subsidized rents for older adults living in Section 202 properties. In 1990, Section 202 rental subsidies changed from PBRA to Project Rental Assistance Contracts (PRAC). For a full history of the Section 202 program, see: <a href="https://crsreports.congress.gov/product/pdf/RL/RL33508/46">https://crsreports.congress.gov/product/pdf/RL/RL33508/46</a>
+</p>
+<p>
+  <a href="#_ftnref43" name="_ftn43"><sup>[43]</sup></a> CBPP, ” More Housing Vouchers Needed to Help Older Adults Afford Stable Homes in the Community,” August 5, 2021, <a href="https://www.cbpp.org/research/housing/more-housing-vouchers-needed-to-help-older-adults-afford-stable-homes-in-the">https://www.cbpp.org/research/housing/more-housing-vouchers-needed-to-help-older-adults-afford-stable-homes-in-the</a>
+</p>
+<p>
+  <a href="#_ftnref44" name="_ftn44"><sup>[44]</sup></a> Erik Gartland, ” Chart Book: Funding Limitations Create Widespread Unmet Need for Rental Assistance,” CBPP, February 15, 2022, <a href="https://www.cbpp.org/research/housing/funding-limitations-create-widespread-unmet-need-for-rental-assistance">https://www.cbpp.org/research/housing/funding-limitations-create-widespread-unmet-need-for-rental-assistance</a>
+</p>
+<p>
+  <a href="#_ftnref45" name="_ftn45"><sup>[45]</sup></a> Benioff Homelessness and Housing Initiative, ” California Statewide Study of People Experiencing Homelessness,” June 2023, <a href="https://homelessness.ucsf.edu/our-impact/studies/california-statewide-study-people-experiencing-homelessness">https://homelessness.ucsf.edu/our-impact/studies/california-statewide-study-people-experiencing-homelessness</a>
+</p>
+<p>
+  <a href="#_ftnref46" name="_ftn46"><sup>[46]</sup></a> Kathryn A. Henderson et. al., ”Addressing Homelessness Among Older Adults,” Office of the Assistant Secretary for Planning and Evaluation, October 30, 2023, <a href="https://aspe.hhs.gov/reports/older-adult-homelessness">https://aspe.hhs.gov/reports/older-adult-homelessness</a>
+</p>
+<p>
+  <a href="#_ftnref47" name="_ftn47"><sup>[47]</sup></a> 2023 HUD Point-in-Time count. A Continuum of Care (CoC) is a regional or local planning body that coordinates housing and services funding for homeless families and individuals. For more information on CoCs, see: <a href="https://endhomelessness.org/resource/what-is-a-continuum-of-care/">https://endhomelessness.org/resource/what-is-a-continuum-of-care/</a>
+</p>
+<p>
+  <a href="#_ftnref48" name="_ftn48"><sup>[48]</sup></a> Jessica Richards and Randall Kuhn, ” Unsheltered Homelessness and Health: A Literature Review,” AJPM Focus, Vol. 2, Issue 1, March 2023, <a href="https://www.sciencedirect.com/science/article/pii/S2773065422000414">https://www.sciencedirect.com/science/article/pii/S2773065422000414</a>
+</p>
+<p>
+  <a href="#_ftnref49" name="_ftn49"><sup>[49]</sup></a> Technical Assistance Collaborative, Priced Out: The Housing Crisis for People with Disabilities,
+
+  <a href="https://www.tacinc.org/resources/priced-out/">https://www.tacinc.org/resources/priced-out/</a>
+</p>
+<p>
+  <a href="#_ftnref50" name="_ftn50"><sup>[50]</sup></a> Anna Bailey, Raquel De La Huerga, and Erik Gartland, “More Housing Vouchers Needed to Help People With Disabilities Afford Stable Homes in the Community,” CBPP, July 6, 2021, h<a href="https://www.cbpp.org/research/housing/more-housing-vouchers-needed-to-help-people-with-disabilities-afford-stable-homes">ttps://www.cbpp.org/research/housing/more-housing-vouchers-needed-to-help-people-with-disabilities-afford-stable-homes</a>
+</p>
+<p>
+  <a href="#_ftnref51" name="_ftn51"><sup>[51]</sup></a> National Fair Housing Alliance, ”2023 Fair Housing Trends Report,” August 7, 2023, <a href="https://nationalfairhousing.org/resource/2023-fair-housing-trends-report/">https://nationalfairhousing.org/resource/2023-fair-housing-trends-report/</a>
+</p>
+<p>
+  <a href="#_ftnref52" name="_ftn52"><sup>[52]</sup></a> National Disability Institute, ”Financial Inequality: Disability, Race and Poverty in America,” February 2019, <a href="https://www.nationaldisabilityinstitute.org/reports/financial-inequality-disability-race-and-poverty-in-america/">https://www.nationaldisabilityinstitute.org/reports/financial-inequality-disability-race-and-poverty-in-america/</a>
+</p>
+<p>
+  <a href="#_ftnref53" name="_ftn53"><sup>[53]</sup></a> Tatjana Meschede, Kartik Trivedi, and Joe Caldwell, ” Severe housing and neighborhood inequities of households with disabled members and households in need of long-term services and supports,” Housing and Society Vol. 50, Issue 2, April 22, 2022, <a href="https://www.tandfonline.com/doi/abs/10.1080/08882746.2022.2065614">https://www.tandfonline.com/doi/abs/10.1080/08882746.2022.2065614</a>
+</p>
