--- a/webroot/scrolling.html
+++ b/webroot/scrolling.html
@@ -76,35 +76,57 @@
     <p>
       The Section 8 Project-Based Rental Assistance Program (PBRA) was established in 1974. Project-based assistance means the rental subsidy is tied to a unit in a building. The tenant will receive assistance as long as they occupy the unit. It is administered by private owners who enter into rental assistance agreements with HUD. Most owners are for-profit entities, but nonprofits and some public housing agencies own a significant share of Section 8 PBRA properties. By the mid-1980s, the program faced criticism for rising costs and concentrating assisted families in neighborhoods with high poverty rates.<a href="#_ftn27" name="_ftnref27"><sup>[27]</sup></a> Although Congress stopped funding new PBRA contracts in 1983, the program still helps house roughly 2 million people in 1.2 million households.<a href="#_ftn28" name="_ftnref28"><sup>[28]</sup></a>
   </p>
-    <section name="milwaukee">
-      <div class='slide' name='milwaukee-5'>
-        <h2>Gap Between VAUs and Voucher-Assisted Households Suggests Other Forces Beyond Personal Preference
-        </h2>
-        <ul>
-          <li>
-            SAFMRs in theory unlock lots of voucher-affordable rental units in lower poverty neighborhoods; However, many renters of color attempting to use their housing voucher run into source of income discrimination and administrative burdens imposed by the voucher program, both compounded by the racial discrimination many renters of color face in housing.
-          </li>
-          <li>
-            There’s nothing wrong with assisted Black renters or other renters of color choosing to live in communities of color; the focus should be on providing housing options in the communities of their choice and trusting that they know which neighborhood is best for them. 
-          </li>
-          <li>
-            But the concentration of VAUs in neighborhoods made up largely of affluent white people reflects explicitly racist housing policies that created deeply segregated neighborhoods that persist today.
-          </li>
-        </ul>
+  <img style="width:580px" src="demo_assets/image11.png" />
+    <section name="los-angeles">
+      <div class='slide' name='la-1'>
+        <p>
+          The Los Angeles metro area is home to the largest Latine population, second largest Asian population, and fourth largest Native Hawai’ian and Pacific Islander (NHPI) population of any metro area in the U.S. It also has one of the highest rent cost burden rates of any metro area: 56 percent of renter households spend more than 30 percent of their income on rent each month, and nearly a third (31 percent) pay more than half their income on rent.<a href="#_ftn29" name="_ftnref29"><sup>[29]</sup></a> California has long dealt with an acute housing affordability and homelessness crisis, driven by a deep shortage of housing affordable to renters with the lowest incomes.
+      </p>
+      <p>
+          For every 100 renter households in the Los Angeles metro area with extremely low incomes,<a href="#_ftn30" name="_ftnref30"><sup>[30]</sup></a> there are only 21 affordable and available rental units.<a href="#_ftn31" name="_ftnref31"><sup>[31]</sup></a> This makes housing insecurity all but inevitable for renters with the lowest incomes who do not receive rental assistance. Even California’s higher state minimum wage is not enough to cover the high cost of housing. A full-time employee working at the $16 an hour minimum wage would have to work 96 hours each week just to afford a modest one-bedroom rental unit in California.<a href="#_ftn32" name="_ftnref32"><sup>[32]</sup></a>
+      </p>
       </div>
-      <div class='slide' name='milwaukee-6'>
-        <h2>Despite Concentration of Voucher-Assisted Families in Higher Poverty Neighborhoods, SAFMRs Broaden Housing Options in Low-Poverty Neighborhoods</h2>
-        <ul>
-          <li>
-            While only 11 percent of voucher-assisted families with children in Milwaukee live in low-poverty neighborhoods, over a third (34 percent) of VAUs are in low-poverty areas.
-          </li>
-          <li>
-            Expanding housing options in lower poverty neighborhoods is particularly important for families of color with children, who have historically been excluded from living in these communities and therefore face additional barriers to accessing rental units in these neighborhoods.
-          </li>
-          <li>
-            Setting payment standards at the ZIP code level instead of at the metro level also reduces the number of VAUs in high-poverty neighborhoods.
-          </li>
-        </ul>
+      <div class='slide' name='la-2'>
+        <p>
+          Such severe housing affordability issues make the Section 8 Project-Based Rental Assistance Program (PBRA) a crucial source of affordable housing for over 39,000 families with low incomes living in the Los Angeles metro area. Asian and NHPI renters are most likely to be assisted by PBRA compared to other race/ethnicity groups in the metro area. Asian and NHPI people make up 17 percent of the Los Angeles metro area’s overall population, but 32 percent of PBRA-assisted households are headed by an Asian or NHPI person, a significantly higher share than voucher-assisted households and public housing residents.<a href="#_ftn33" name="_ftnref33"><sup>[33]</sup></a>
+      </p>
+      <p>
+          This is partly driven by PBRA-funded properties located in neighborhoods where Asian and NHPI renters make up the overwhelming majority of residents. These neighborhoods also tend to have high rates of poverty: One-fourth of PBRA-assisted households headed by an Asian or NHPI person live in high-poverty neighborhoods, a slightly higher share than the one-fifth of all PBRA-assisted families in the Los Angeles metro area living in high-poverty neighborhoods.
+      </p>
+      <p>
+          Over half (53 percent) of renter households headed by an Asian person in the Los Angeles metro area are cost-burdened, and nearly 1 in 3 (30 percent) pay more than 50 percent of their income on rent each month.<a href="#_ftn34" name="_ftnref34"><sup>[34]</sup></a> Despite many Asian renters facing high housing costs, Asian renters are still less likely to be burdened by housing costs than Black and Latine renters both nationally and in the Los Angeles metro area. However, Asian and NHPI renters with low incomes are more likely to be living in overcrowded housing. Among renters with low incomes living in cost-burdened households, Asian and NHPI renters have a higher likelihood of living with extended family in doubled-up and overcrowded households than most race/ethnicity groups.<a href="#_ftn35" name="_ftnref35"><sup>[35]</sup></a>
+      </p>
+      <p>
+          Asian and Native Hawaiian and Pacific Islander renters often face distinct housing challenges that aren’t always captured when the two groups are combined, which typically happens for statistical purposes. For instance, while Asian people experience the lowest rate of homelessness, NHPI people have the highest homelessness rate of any race/ethnicity group.<a href="#_ftn36" name="_ftnref36"><sup>[36]</sup></a> This partly reflects the intergenerational impact of settler colonialism and displacement on NHPI communities in Hawai’i and U.S. Territories in the Pacific and the high share of NHPI residents living in expensive housing markets.<a href="#_ftn37" name="_ftnref37"><sup>[37]</sup></a> This has shaped their unique experiences of homelessness and housing insecurity, which are distinct from those of indigenous people in the contiguous United States.<a href="#_ftn38" name="_ftnref38"><sup>[38]</sup></a> A higher share of NHPI people live below the poverty line, and NHPI renters are more likely to be burdened by housing costs and live in an overcrowded household compared to Asian renters.<a href="#_ftn39" name="_ftnref39"><sup>[39]</sup></a>
+      </p>
+      </div>
+      <div class="slide" name="la-3">
+        <p>
+          Older adults make up the overwhelming majority of those assisted by PBRA in the Los Angeles metro area: over 3 in 4 (77%) PBRA-assisted households are headed by a person aged 62 and older, a much higher share than voucher-assisted households and public housing residents.<a href="#_ftn40" name="_ftnref40"><sup>[40]</sup></a> (See Fig. X). While this aligns with national demographics of PBRA-assisted households, it’s a significantly higher share than the roughly half (53 percent) of PBRA-assisted households headed by older adults overall.<a href="#_ftn41" name="_ftnref41"><sup>[41]</sup></a>
+      </p>
+      <p>
+          This reflects in part properties providing housing to older adults through the Housing for the Elderly program (also known as Section 202) that are still subsidized through the PBRA program.<a href="#_ftn42" name="_ftnref42"><sup>[42]</sup></a> Section 202 housing typically includes service coordinators who help connect residents with other community services that support independent living, including physical and behavioral health services for those who want and need them. PBRA is a critical funding source for affordable housing for older adults, helping provide financing to preserve existing properties.
+      </p>
+      <p>
+          Rental assistance helps communities create a variety of integrated housing options for older adults – including supportive housing – so that people can choose the housing that meets their needs without being isolated from the rest of the community. This includes scattered-site supportive housing, including for households with tenant-based vouchers, and project-based supportive housing that houses a mix of people who do and don’t need supportive services. This can help older adults who want to age in place live in their own homes instead of congregate care settings, such as nursing homes or psychiatric facilities.<a href="#_ftn43" name="_ftnref43"><sup>[43]</sup></a>
+      </p>
+      <p>
+          Older adults and non-elderly people with disabilities are much more likely to receive federal rental assistance than other people in need of assistance, but there are still many people in these groups who face serious hardship because they can’t afford housing.<a href="#_ftn44" name="_ftnref44"><sup>[44]</sup></a> A recent representative study of adults experiencing homelessness in California found that 44 percent of unhoused adults were 50 and older.<a href="#_ftn45" name="_ftnref45"><sup>[45]</sup></a> Many older adults are no longer able to work and rely on fixed incomes provided by Supplemental Security Income (SSI) that are often too low to cover housing costs.<a href="#_ftn46" name="_ftnref46"><sup>[46]</sup></a> In 2023, over 4,700 people experiencing homelessness in the Los Angeles City and County Continuum of Care (CoC) were 65 and older, of which nearly three-fourths (74 percent) were experiencing unsheltered homelessness.<a href="#_ftn47" name="_ftnref47"><sup>[47]</sup></a> Living in a car, on the street, or other places not meant for human habitation, can exacerbate risk of chronic disease and serious mental illness, lower access to health services, and increase food insecurity for older adults.<a href="#_ftn48" name="_ftnref48"><sup>[48]</sup></a>
+      </p>
+      </div>
+      <div class="slide" name="la-4">
+        <p>
+          PBRA assists roughly 6,500 households that include a person with a disability in the Los Angeles metro area. Some 14 percent of PBRA-assisted households including a person with a disability live in high-poverty neighborhoods in the Los Angeles metro area. Rental assistance can help people with disabilities whose only source of income is SSI keep a roof over their head. For instance, SSI in California provides a basic monthly benefit of $1,163 in 2024, which is too little to pay for a typical one-bedroom apartment even if they use every dollar of their benefits for rent.<a href="#_ftn49" name="_ftnref49"><sup>[49]</sup></a>
+      </p>
+      <p>
+          However, funding limitations leave many renters with disabilities and low incomes without the assistance they need to stay stably housed. While some may require supportive housing, rental assistance and short-term support in navigating the rental market are likely enough for most adults with disabilities to gain long-term housing stability.<a href="#_ftn50" name="_ftnref50"><sup>[50]</sup></a>
+      </p>
+      <p>
+          Renters with disabilities and low incomes also face unique barriers to housing affordability and accessibility. Finding a unit that accommodates the needs of people with disabilities so they can easily enter and safely use it can be challenging due to the dearth of accessible homes. Even when a home is accessible, people with disabilities often face landlord discrimination: discrimination based on disability accounted for over half of fair housing complaints filed nationally in 2022.<a href="#_ftn51" name="_ftnref51"><sup>[51]</sup></a> People with disabilities are also often excluded from employment and education opportunities, and people with disabilities can face higher cost of living due to steep medical bills, transportation, and expensive home accessibility modifications.<a href="#_ftn52" name="_ftnref52"><sup>[52]</sup></a>
+      </p>
+      <p>
+          As a result, people with disabilities are more likely to live below the federal poverty line, live in poor quality housing, and experience homelessness compared to people without disabilities, posing additional challenges to housing security.<a href="#_ftn53" name="_ftnref53"><sup>[53]</sup></a> Lack of sufficient income or rental assistance to stay stably housed can force people with disabilities into congregate or institutional settings that undermine their independence. Expanding access to inclusive and affordable housing means people with disabilities can live in neighborhoods that best meet their needs, such as near key community resources, services, or social supports that reduce isolation and barriers to community living.
+      </p>
       </div>
       <div class='slide' name='milwaukee-7'>
         <h2>White Communities Effectively “Opportunity Hoard” by Excluding Voucher-Assisted People of Color</h2>
@@ -150,6 +172,9 @@
     </div>
     <div name='dc-chart-2'>
       <img src="./demo_assets/image10.svg">
+    </div>
+    <div name='la-chart-1'>
+      <img src="./demo_assets/image15.svg">
     </div>
   </div>
   <div id="hous4-16-18">
