more work on scrolling

--- a/webroot/scrolling.html
+++ b/webroot/scrolling.html
@@ -217,6 +217,30 @@
 </p>
 
   <div class='slide-custom-backgrounds'>
+    <div name="dc-map-1" class="fill">
+      <img src="./demo_assets/dc_1.jpg">
+    </div>
+    <div name="dc-map-2" class="fill">
+      <img src="./demo_assets/dc_2.jpg">
+    </div>
+    <div name="la-map-1" class="fill">
+      <img src="./demo_assets/la_1.jpg">
+    </div>
+    <div name="la-map-2" class="fill">
+      <img src="./demo_assets/la_2.jpg">
+    </div>
+    <div name="la-map-3" class="fill">
+      <img src="./demo_assets/la_3.jpg">
+    </div>
+    <div name="milwaukee-map-1" class="fill">
+      <img src="./demo_assets/milwaukee_1.jpg">
+    </div>
+    <div name="milwaukee-map-2" class="fill">
+      <img src="./demo_assets/milwaukee_2.jpg">
+    </div>
+    <div name="milwaukee-map-3" class="fill">
+      <img src="./demo_assets/milwaukee_3.jpg">
+    </div>
     <div name='dc-chart-1'>
       <img src="./demo_assets/image8.svg">
     </div>
